docs: add documentation for configurable warnings

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -194,6 +194,7 @@ nav:
       - Pixi Manifest: reference/pixi_manifest.md
       - Pixi Configuration: reference/pixi_configuration.md
       - CLI: reference/cli/pixi.md
+      - Warnings: reference/warnings.md
       - Environment Variables: reference/environment_variables.md
   - Misc:
       - Changelog: CHANGELOG.md
