--- a/pixi-build-backends/py-pixi-build-backend/Cargo.toml
+++ b/pixi-build-backends/py-pixi-build-backend/Cargo.toml
@@ -12,8 +12,8 @@ name = "pixi_build_backend"
 
 [features]
 default = ["rustls-tls"]
-native-tls = ["pixi_build_backend/native-tls", "rattler-build/native-tls"]
-rustls-tls = ["pixi_build_backend/rustls-tls", "rattler-build/rustls-tls"]
+native-tls = ["pixi_build_backend/native-tls"]
+rustls-tls = ["pixi_build_backend/rustls-tls"]
 
 [dependencies]
 # PyO3 for Python bindings
@@ -42,9 +42,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
 tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "rt"] }
-
-# Rattler-build
-rattler-build = { git = "https://github.com/prefix-dev/rattler-build", branch = "main", default-features = false }
 
 # Error handling
 miette = "7.5.0"
