fix: update ROS backend snapshots and CI change detection
PR #5513 changed recipe YAML serialization to omit null fields, but
missed updating ROS backend snapshots. The ROS tests were skipped on
the PR because CI only checked for changes under pixi-build-ros/.

Update snapshots to match new serialization and broaden CI change
detection to include py-pixi-build-backend, recipe_stage0, and
pixi_build_backend crates.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,6 +94,9 @@ jobs:
           files_yaml: |
             code:
               - "pixi-build-backends/backends/pixi-build-ros/**"
+              - "pixi-build-backends/py-pixi-build-backend/**"
+              - "crates/recipe_stage0/**"
+              - "crates/pixi_build_backend/**"
 
   lint:
     name: "lint"
