--- a/crates/pixi_core/Cargo.toml
+++ b/crates/pixi_core/Cargo.toml
@@ -68,9 +68,11 @@ rattler_solve = { workspace = true }
 rattler_virtual_packages = { workspace = true }
 rstest = { workspace = true }
 serde = { workspace = true }
+serde_ignored = { workspace = true }
 serde_json = { workspace = true }
 tabwriter = { workspace = true }
 tempfile = { workspace = true }
+temp-env = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
 toml_edit = { workspace = true }
