docs: improve sidebar rendering

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,7 +52,7 @@ theme:
     - navigation.instant
     - navigation.instant.progress
     - navigation.tracking
-    - navigation.sections
+    - navigation.indexes
     - navigation.top
     - navigation.footer
 
