Output help if the user provides a workspace that is not in the registry

--- a/crates/pixi_core/Cargo.toml
+++ b/crates/pixi_core/Cargo.toml
@@ -70,6 +70,7 @@ rstest = { workspace = true }
 serde = { workspace = true }
 serde_ignored = { workspace = true }
 serde_json = { workspace = true }
+strsim = { workspace = true }
 tabwriter = { workspace = true }
 tempfile = { workspace = true }
 temp-env = { workspace = true }
