--- a/docs/source_files/pixi_tomls/task_arguments.toml
+++ b/docs/source_files/pixi_tomls/task_arguments.toml
@@ -32,7 +32,13 @@ cmd = "echo 'Compiling in {{ mode }} mode'"
 
 # Task with choices and a default value
 [tasks.test]
-args = [{ "arg" = "suite", "default" = "unit", "choices" = ["unit", "integration", "e2e"] }]
+args = [
+  { "arg" = "suite", "default" = "unit", "choices" = [
+    "unit",
+    "integration",
+    "e2e",
+  ] },
+]
 cmd = "echo 'Running {{ suite }} tests'"
 
 # --8<-- [end:project_tasks_choices]
