feat: list data for pypi packages from cached index data
When using `pixi list`, use data from the cached index data
that we have stored. Fall back to leaving the data blank
if nothing is cached.

We do run into the blank data case occasionally:
* Some repositories are to not get cached and uv accepts that
* Some are not "simple"

The `pytorch` index falls into both of those categories.

Fixes: #5114

--- a/crates/pixi_cli/Cargo.toml
+++ b/crates/pixi_cli/Cargo.toml
@@ -41,6 +41,7 @@ miette = { workspace = true, features = ["fancy-no-backtrace"] }
 miette-arborium = { version = "2.5.0", features = ["lang-toml"] }
 pathdiff = { workspace = true }
 pep508_rs = { workspace = true }
+percent-encoding = { workspace = true }
 pixi_api = { workspace = true }
 pixi_auth = { workspace = true }
 pixi_build_frontend = { workspace = true }
@@ -101,6 +102,7 @@ uv-distribution-types = { workspace = true }
 uv-normalize = { workspace = true }
 uv-pep508 = { workspace = true }
 uv-pypi-types = { workspace = true }
+uv-redacted = { workspace = true }
 uv-requirements-txt = { workspace = true }
 uv-types = { workspace = true }
 which = { workspace = true }
